welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: Unit does not take parameters
  {
  ^SlugTracking:13: error: not found: value estSurBaggle
while (!(estSurBaggle()))
         ^